--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-575f3e1 elementor-widget__width-auto elementor-widget elementor-widget-heading" data-id="575f3e1" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h1 class="elementor-heading-title elementor-size-default">FULL STACK DEVELOPER</h1>		</div>
+			<h1 class="elementor-heading-title elementor-size-default">FULL-STACK DEVELOPER</h1>		</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-54f17c5 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="54f17c5" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-no">
