Update the index

--- a/index.html
+++ b/index.html
@@ -1554,7 +1554,7 @@
                               user experiences. I’m dedicated to expanding my
                               full-stack capabilities, ensuring I bring both
                               aesthetic and functional excellence to every
-                              project. This is Mark vicent Emmanuel
+                              project.
                             </p>
                           </div>
                         </div>
