Update the index

--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,7 @@
                 >
                   <div class="elementor-widget-container">
                     <h1 class="elementor-heading-title elementor-size-default">
-                      FULL-STACK DEVELOPER
+                      FULL STACK DEVELOPER
                     </h1>
                   </div>
                 </div>
